syntax = "proto3";

option csharp_namespace = "Routing.gRPC.Protos";

package Routing;

// Waypoint status enum
enum WaypointStatus {
  WAYPOINT_STATUS_PENDING = 0;
  WAYPOINT_STATUS_EN_ROUTE = 1;
  WAYPOINT_STATUS_ARRIVED = 2;
  WAYPOINT_STATUS_SKIPPED = 3;
  WAYPOINT_STATUS_COMPLETED = 4;
}

// Waypoint message
message Waypoint {
   string id = 1;
   string route_id = 2;
   string location_name = 3;
   double latitude = 4;
   double longitude = 5;
   int32 sequence = 6;
  optional string estimated_arrival = 7;   
  optional string estimated_departure = 8;
  optional WaypointStatus status = 9;
}

// Requests and Responses

// For getting all waypoints of a route
message GetWaypointsByRouteRequest {
   string route_id = 1;
}

message GetWaypointsByRouteResponse {
  repeated Waypoint waypoints = 1;
}

// For status updates
message UpdateWaypointStatusRequest {
   string waypoint_id = 1;
   WaypointStatus new_status = 2;
}

message UpdateWaypointStatusResponse {
   Waypoint updated_waypoint = 1;
}


//  gRPC endpoints

service WaypointProtoService {
  rpc GetWaypointsByRoute(GetWaypointsByRouteRequest) returns (GetWaypointsByRouteResponse);
  rpc UpdateWaypointStatus(UpdateWaypointStatusRequest) returns (UpdateWaypointStatusRequest);
}
